[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/block_editor/block_dock.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/block_editor/dock/item_move_forward.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/block_editor/dock/item_turn_left.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/block_editor/blocks/block_turn_left.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/block_editor/dock/item_turn_right.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/block_editor/blocks/block_turn_right.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/block_editor/dock/item_pick_up.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/block_editor/blocks/block_pick_up.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/block_editor/dock/item_put_down.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/block_editor/blocks/block_put_down.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/block_editor/dock/item_chop.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/block_editor/blocks/block_chop.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/block_editor/dock/item_increment.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/block_editor/blocks/block_increment.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/block_editor/dock/item_decrement.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/block_editor/blocks/block_decrement.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/block_editor/dock/item_wait.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/block_editor/blocks/block_wait.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/block_editor/dock/item_if.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/block_editor/dock/item_if_else.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/block_editor/dock/item_loop.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/block_editor/dock/item_repeat.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/block_editor/blocks/block_repeat.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/block_editor/blocks/block_end_any_loop.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/block_editor/dock/item_while.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/block_editor/blocks/block_while.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/block_editor/dock/item_halt.tscn" type="PackedScene" id=28]
[ext_resource path="res://scenes/block_editor/blocks/block_halt.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/block_editor/dock/item_call.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/block_editor/blocks/block_call.tscn" type="PackedScene" id=31]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.239216, 0.239216, 0.239216, 1 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.54902 )

[node name="BlockDock" type="PanelContainer"]
margin_right = 100.0
margin_bottom = 540.0
rect_min_size = Vector2( 120, 0 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 1 )

[node name="Scroll" type="ScrollContainer" parent="."]
margin_right = 120.0
margin_bottom = 540.0

[node name="Margin" type="MarginContainer" parent="Scroll"]
margin_right = 108.0
margin_bottom = 902.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Items" type="VBoxContainer" parent="Scroll/Margin"]
editor/display_folded = true
margin_left = 5.0
margin_top = 5.0
margin_right = 103.0
margin_bottom = 897.0
size_flags_horizontal = 3
custom_constants/separation = 7

[node name="LabelTitle" type="Label" parent="Scroll/Margin/Items"]
margin_right = 98.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 6 )
text = "Dock"
align = 1
valign = 1

[node name="LabelActions" type="Label" parent="Scroll/Margin/Items"]
margin_top = 51.0
margin_right = 98.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 7 )
text = "Action"
align = 1
valign = 1

[node name="ItemMoveForward" parent="Scroll/Margin/Items" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 98.0
margin_right = 98.0
margin_bottom = 151.0

[node name="ItemTurnLeft" parent="Scroll/Margin/Items" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 158.0
margin_right = 98.0
margin_bottom = 186.0
blocks = [ ExtResource( 5 ) ]

[node name="ItemTurnRight" parent="Scroll/Margin/Items" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 193.0
margin_right = 98.0
margin_bottom = 221.0
blocks = [ ExtResource( 7 ) ]

[node name="ItemPickUp" parent="Scroll/Margin/Items" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 228.0
margin_right = 98.0
margin_bottom = 256.0
blocks = [ ExtResource( 9 ) ]

[node name="ItemPutDown" parent="Scroll/Margin/Items" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 263.0
margin_right = 98.0
margin_bottom = 291.0
blocks = [ ExtResource( 11 ) ]

[node name="ItemChop" parent="Scroll/Margin/Items" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 298.0
margin_right = 98.0
margin_bottom = 326.0
blocks = [ ExtResource( 13 ) ]

[node name="ItemIncrement" parent="Scroll/Margin/Items" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 333.0
margin_right = 98.0
margin_bottom = 386.0
blocks = [ ExtResource( 15 ) ]

[node name="ItemDecrement" parent="Scroll/Margin/Items" instance=ExtResource( 16 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 393.0
margin_right = 98.0
margin_bottom = 446.0
blocks = [ ExtResource( 17 ) ]

[node name="ItemWait" parent="Scroll/Margin/Items" instance=ExtResource( 18 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 453.0
margin_right = 98.0
margin_bottom = 481.0
blocks = [ ExtResource( 19 ) ]

[node name="LabelBranching" type="Label" parent="Scroll/Margin/Items"]
margin_top = 488.0
margin_right = 98.0
margin_bottom = 528.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 7 )
text = "Branching"
align = 1
valign = 1

[node name="ItemIf" parent="Scroll/Margin/Items" instance=ExtResource( 20 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 535.0
margin_right = 98.0
margin_bottom = 563.0

[node name="ItemIfElse" parent="Scroll/Margin/Items" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 570.0
margin_right = 98.0
margin_bottom = 598.0

[node name="LabelLooping" type="Label" parent="Scroll/Margin/Items"]
margin_top = 605.0
margin_right = 98.0
margin_bottom = 645.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 7 )
text = "Looping"
align = 1
valign = 1

[node name="ItemLoop" parent="Scroll/Margin/Items" instance=ExtResource( 22 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 652.0
margin_right = 98.0
margin_bottom = 680.0

[node name="ItemRepeat" parent="Scroll/Margin/Items" instance=ExtResource( 23 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 687.0
margin_right = 98.0
margin_bottom = 715.0
blocks = [ ExtResource( 24 ), ExtResource( 25 ) ]

[node name="ItemWhile" parent="Scroll/Margin/Items" instance=ExtResource( 26 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 722.0
margin_right = 98.0
margin_bottom = 750.0
blocks = [ ExtResource( 27 ), ExtResource( 25 ) ]

[node name="LabelSpecial" type="Label" parent="Scroll/Margin/Items"]
margin_top = 757.0
margin_right = 98.0
margin_bottom = 797.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 7 )
text = "Special"
align = 1
valign = 1

[node name="ItemHalt" parent="Scroll/Margin/Items" instance=ExtResource( 28 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 804.0
margin_right = 98.0
margin_bottom = 832.0
blocks = [ ExtResource( 29 ) ]

[node name="ItemCall" parent="Scroll/Margin/Items" instance=ExtResource( 30 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 839.0
margin_right = 98.0
margin_bottom = 892.0
blocks = [ ExtResource( 31 ) ]

[node name="CoverPanel" type="Panel" parent="."]
visible = false
margin_right = 120.0
margin_bottom = 540.0
custom_styles/panel = SubResource( 4 )

